# -botnet

./: README.md
client/: CMakeLists.txt
client/source/: client.c  client.h  main.c
server/: CMakeLists.txt
server/source/: main.c  server.c  server.h
